<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/nav_browser"
            android:title="@string/Browser"/>

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/nav_music"
            android:title="@string/music"/>

        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/nav_compass"
            android:title="@string/compass"/>

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/nav_camera"
            android:title="@string/camera"/>

        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/nav_microphone"
            android:title="@string/microphone"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_file"
            android:icon="@drawable/nav_file"
            android:title="@string/file"/>

    </group>
</menu>